--- a/app/src/main/res/layout/activity_image_preview.xml
+++ b/app/src/main/res/layout/activity_image_preview.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -7,22 +6,24 @@
     android:background="?attr/colorSurface"
     android:fitsSystemWindows="true">
 
-    <!-- Content Container -->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="16dp"
-        android:clipToPadding="false">
+        android:layout_height="match_parent">
 
-        <!-- Full Image -->
         <ImageView
             android:id="@+id/fullImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:background="?attr/colorSurface"
-            android:contentDescription="Full screen image"/>
+            android:contentDescription="Full content"/>
+
+        <VideoView
+            android:id="@+id/fullVideo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
     </FrameLayout>
 
