--- a/app/src/main/res/layout/item_template_grid.xml
+++ b/app/src/main/res/layout/item_template_grid.xml
@@ -3,8 +3,8 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="180dp"
     android:layout_margin="6dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp"
@@ -15,8 +15,9 @@
     <ImageView
         android:id="@+id/imgTemplate"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:contentDescription="Template image"/>
 
 </com.google.android.material.card.MaterialCardView>
